data/forge_javadoc/1.8.9/processed/net_minecraftforge_client_GuiIngameForge.md
# GuiIngameForge

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiIngame → net.minecraftforge.client.GuiIngameForge

## Class signature

```java
public class GuiIngameForge extends GuiIngame
```

## Constructors

- `GuiIngameForge(Minecraft mc)`

## Methods

- `ScaledResolution getResolution()`
- `protected void renderAir(int width, int height)`
- `protected void renderArmor(int width, int height)`
- `protected void renderBossHealth()` — Renders dragon's (boss) health on the HUD
- `protected void renderChat(int width, int height)`
- `protected void renderCrosshairs(int width, int height)`
- `protected void renderExperience(int width, int height)`
- `void renderFood(int width, int height)`
- `void renderGameOverlay(float partialTicks)`
- `void renderHealth(int width, int height)`
- `protected void renderHealthMount(int width, int height)`
- `protected void renderHUDText(int width, int height)`
- `protected void renderJumpBar(int width, int height)`
- `protected void renderPlayerList(int width, int height)`
- `protected void renderPortal(ScaledResolution res, float partialTicks)`
- `protected void renderRecordOverlay(int width, int height, float partialTicks)`
- `protected void renderSleepFade(int width, int height)`
- `protected void renderTitle(int width, int height, float partialTicks)`
- `protected void renderToolHightlight(ScaledResolution res)`
- `protected void renderTooltip(ScaledResolution res, float partialTicks)`

## Fields

- `static int left_height`
- `static boolean renderAir`
- `static boolean renderArmor`
- `static boolean renderBossHealth`
- `static boolean renderCrosshairs`
- `static boolean renderExperiance`
- `static boolean renderFood`
- `static boolean renderHealth`
- `static boolean renderHealthMount`
- `static boolean renderHelmet`
- `static boolean renderHotbar`
- `static boolean renderJumpBar`
- `static boolean renderObjective`
- `static boolean renderPortal`
- `static int right_height`