data/forge_javadoc/1.12.2/processed/net_minecraftforge_client_GuiIngameForge.md
# GuiIngameForge

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiIngame → net.minecraftforge.client.GuiIngameForge

## Class signature

```java
public class GuiIngameForge extends GuiIngame
```

## Constructors

- `GuiIngameForge(Minecraft mc)`

## Methods

- `ScaledResolution getResolution()`
- `protected void renderAir(int width, int height)`
- `protected void renderArmor(int width, int height)`
- `protected void renderBossHealth()`
- `protected void renderChat(int width, int height)`
- `protected void renderCrosshairs(float partialTicks)`
- `protected void renderExperience(int width, int height)`
- `void renderFood(int width, int height)`
- `protected void renderFPSGraph()`
- `void renderGameOverlay(float partialTicks)`
- `void renderHealth(int width, int height)`
- `protected void renderHealthMount(int width, int height)`
- `protected void renderHotbar(ScaledResolution res, float partialTicks)`
- `protected void renderHUDText(int width, int height)`
- `protected void renderJumpBar(int width, int height)`
- `protected void renderPlayerList(int width, int height)`
- `protected void renderPortal(ScaledResolution res, float partialTicks)`
- `protected void renderPotionIcons(ScaledResolution resolution)`
- `protected void renderRecordOverlay(int width, int height, float partialTicks)`
- `protected void renderSleepFade(int width, int height)`
- `protected void renderSubtitles(ScaledResolution resolution)`
- `protected void renderTitle(int width, int height, float partialTicks)`
- `protected void renderToolHighlight(ScaledResolution res)`
- `protected void renderVignette(float lightLevel, ScaledResolution scaledRes)`
- `void setOverlayMessage(ITextComponent component, boolean animateColor)`

## Fields

- `static int left_height`
- `static boolean renderAir`
- `static boolean renderArmor`
- `static boolean renderBossHealth`
- `static boolean renderCrosshairs`
- `static boolean renderExperiance`
- `static boolean renderFood`
- `static boolean renderHealth`
- `static boolean renderHealthMount`
- `static boolean renderHelmet`
- `static boolean renderHotbar`
- `static boolean renderJumpBar`
- `static boolean renderObjective`
- `static boolean renderPortal`
- `static boolean renderVignette`
- `static int right_height`